--- a/Desafio_Branching/index.html
+++ b/Desafio_Branching/index.html
@@ -13,7 +13,7 @@
   <div class="container">
     <h1>Ir a Github</h1>
     <a href="https://github.com/">
-      <img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="octocat">
+      <img src="https://github.com/YoyiDesign/M2_desafio2.git" alt="MiBranching">
     </a>
     <button type="button" class="btn">
       <a href="https://github.com/" target="_blank">Click aquí para ir a GitHub!</a>
